# CI-CD-Devops

./: pyproject.toml  setup.py  test_user_service.py  user_service.py
devops2/: Jenkinsfile
project-root/src/: Dockerfile  Jenkinsfile
user-service/: Jenkinsfile  setup.py
user-service/src/user_service/: main.py
